[package]
name = "jito-searcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.10"
jito-protos = { path = "../jito_protos" }
log = "0.4.17"
jito-searcher-client = { path = "../searcher_client" }

solana-keypair = "3.0"
solana-pubkey = "3.0"
solana-transaction = "3.0"
solana-signer = "3.0"
solana-instruction = "3.0"
solana-program = "3.0"
solana-client = "3.0"

spl-memo = "5"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }

# Stable prod versions
prost = "0.13.5"
prost-types = "0.13.5"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
