[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"

# Use individual Solana crates instead of monolithic SDK
solana-packet = { version = "2.2.1", features = ["serde"] }        # For Packet, etc.
solana-pubkey = "2.2.1"
solana-transaction = { version = "2.2.2", features = ["serde"] }   # For VersionedTransaction
solana-instruction = "2.2.1"
solana-program = "2.2.1"
solana-signature = "2.2.1"

[build-dependencies]
tonic-build = "0.12"