[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full", "macros"] }
futures = "0.3"

# gRPC and networking - try native TLS instead of rustls
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
prost = "0.13.5"
prost-types = "0.13.5"

# Use local jito-protos from the submodule
jito-protos = { path = "../jito_protos" }

# Individual Solana crates - using your proven working versions
solana-client = "2.2.7"
solana-instruction = "2.2.1"
solana-pubkey = "2.2.1"
solana-keypair = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = { version = "2.2.2", features = ["serde"] }
solana-program = "2.2.1"
solana-signature = "2.2.1"

hex = "0.4"

# Performance improvements - ArcSwap replaces RwLock for better performance
arc-swap = "1.7"

# Error handling and utilities
thiserror = "1.0"
tracing = "0.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

# Async utilities
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"

[features]
default = []