[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full", "macros"] }
futures = "0.3"

# gRPC and networking - try native TLS instead of rustls
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
prost = "0.13.5"
prost-types = "0.13.5"

# Use local jito-protos from the submodule
jito-protos = { path = "../jito_protos" }

# Individual Solana crates - using your proven working versions
solana-client = "3.0"
solana-instruction = "3.0"
solana-pubkey = "3.0"
solana-keypair = "3.0"
solana-signer = "3.0"
solana-transaction = { version = "3.0", features = ["serde"] }
solana-program = "3.0"
solana-signature = "3.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }

hex = "0.4"

# Performance improvements - ArcSwap replaces RwLock for better performance
arc-swap = "1.7"

# Error handling and utilities
thiserror = "1.0"
tracing = "0.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

# Async utilities
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"

[features]
default = []